Fix wrong architecture name

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -218,10 +218,10 @@ jobs:
             task-namespace: apt
             target: ubuntu-focal
             test-docker-image: ubuntu:focal
-          - label: Ubuntu focal aarch64
-            id: ubuntu-focal-aarch64
+          - label: Ubuntu focal arm64
+            id: ubuntu-focal-arm64
             task-namespace: apt
-            target: ubuntu-focal-aarch64
+            target: ubuntu-focal-arm64
             test-docker-image: arm64v8/ubuntu:focal
           - label: Ubuntu jammy amd64
             id: ubuntu-jammy-amd64
