--- a/packages/apt/ubuntu-jammy/Dockerfile
+++ b/packages/apt/ubuntu-jammy/Dockerfile
@@ -25,6 +25,7 @@ RUN \
     libmsgpack-dev \
     libjemalloc-dev \
     libpcre3-dev \
+    libsimdjson-dev \
     libssl-dev \
     libstemmer-dev \
     libthrift-dev \
