Fix a wrong architecture name

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -184,7 +184,7 @@ jobs:
           - Debian GNU/Linux trixie amd64
           - Debian GNU/Linux trixie arm64
           - Ubuntu focal amd64
-          - Ubuntu focal aarch64
+          - Ubuntu focal arm64
           - Ubuntu jammy amd64
           - AlmaLinux 8 x86_64
           - AlmaLinux 8 aarch64
