ci: set timeout for package build jobs
To prevent CI jobs from running for a long time (max: 6 hours) and
to ensure efficient usage of CI resources, this commit adds
a timeout configuration for package build jobs.

- Set a timeout of 270 minutes for Debian GNU/Linux trixie arm64 builds
- Set a time out of 90 minutes for all the other platforms

This ensures that long-running jobs do not block other developers from
accessing CI resources and helps maintain faster turnaround times for all jobs.

debug

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -237,6 +237,7 @@ jobs:
     env:
       APACHE_ARROW_REPOSITORY: ${{ github.workspace }}/apache-arrow
     runs-on: ubuntu-latest
+    timeout-minutes: ${{ (matrix.id == 'debian-trixie-arm64' && 270) || 90 }}
     steps:
       - uses: actions/checkout@v4
         with:
