--- a/packages/apt/ubuntu-focal/Dockerfile
+++ b/packages/apt/ubuntu-focal/Dockerfile
@@ -23,8 +23,8 @@ RUN \
     liblz4-dev \
     libmecab-dev \
     libmsgpack-dev \
-    libjemalloc-dev \
     libpcre3-dev \
+    libsimdjson-dev \
     libssl-dev \
     libstemmer-dev \
     libthrift-dev \
