ci package ubuntu: add steps for building and testing Ubuntu jammy amd64's package (#1881)
Co-authored-by: Sutou Kouhei <kou@clear-code.com>

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -184,6 +184,7 @@ jobs:
           - Debian GNU/Linux trixie amd64
           - Debian GNU/Linux trixie arm64
           - Ubuntu focal amd64
+          - Ubuntu jammy amd64
           - AlmaLinux 8 x86_64
           - AlmaLinux 8 aarch64
           - AlmaLinux 9 x86_64
@@ -216,6 +217,11 @@ jobs:
             task-namespace: apt
             target: ubuntu-focal
             test-docker-image: ubuntu:focal
+          - label: Ubuntu jammy amd64
+            id: ubuntu-jammy-amd64
+            task-namespace: apt
+            target: ubuntu-jammy
+            test-docker-image: ubuntu:jammy
           - label: AlmaLinux 8 x86_64
             id: almalinux-8-x86_64
             task-namespace: yum
