Disable lintian on non x86_64

--- a/packages/apt/debian-bookworm/Dockerfile
+++ b/packages/apt/debian-bookworm/Dockerfile
@@ -46,3 +46,9 @@ RUN \
     rapidjson-dev \
     zlib1g-dev && \
   apt clean
+
+RUN \
+  if [ $(arch) != "x86_64" ]; then \
+    echo "DEBUILD_LINTIAN=no" >> /etc/devscripts.conf; \
+  fi
+
