--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -184,6 +184,7 @@ jobs:
           - Debian GNU/Linux trixie amd64
           - Debian GNU/Linux trixie arm64
           - Ubuntu focal amd64
+          - Ubuntu focal arm64
           - Ubuntu jammy amd64
           - Ubuntu noble amd64
           - AlmaLinux 8 x86_64
@@ -218,6 +219,12 @@ jobs:
             task-namespace: apt
             target: ubuntu-focal
             test-docker-image: ubuntu:focal
+          - label: Ubuntu focal arm64
+            id: ubuntu-focal-arm64
+            task-namespace: apt
+            target: ubuntu-focal-arm64
+            test-docker-image: arm64v8/ubuntu:focal
+            timeout-minutes: 270
           - label: Ubuntu jammy amd64
             id: ubuntu-jammy-amd64
             task-namespace: apt
