--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -180,7 +180,8 @@ else()
 endif()
 if(GRN_WITH_MESSAGE_PACK)
   if(GRN_WITH_BUNDLED_MESSAGE_PACK)
-    target_link_libraries(libgroonga INTERFACE "$<BUILD_INTERFACE:msgpackc>")
+    target_link_libraries(libgroonga
+                          INTERFACE "$<BUILD_INTERFACE:Groonga::msgpackc>")
   else()
     target_link_libraries(libgroonga INTERFACE Groonga::msgpackc)
   endif()
