--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -193,7 +193,7 @@ jobs:
           - almalinux-9-x86_64
           - almalinux-9-aarch64
           - amazon-linux-2023-x86_64
-          - amazon-linux-2023-aarch64
+          # - amazon-linux-2023-aarch64
         include:
           - id: debian-bookworm-arm64
             timeout-minutes: 60
@@ -209,8 +209,8 @@ jobs:
             timeout-minutes: 60
           - id: almalinux-9-aarch64
             timeout-minutes: 60
-          - id: amazon-linux-2023-aarch64
-            timeout-minutes: 120
+          # - id: amazon-linux-2023-aarch64
+          #   timeout-minutes: 120
     env:
       APACHE_ARROW_REPOSITORY: ${{ github.workspace }}/apache-arrow
     runs-on: ubuntu-latest
