--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -180,8 +180,12 @@ jobs:
         id:
           - debian-bookworm-amd64
           - debian-bookworm-arm64
-          - debian-trixie-amd64
-          - debian-trixie-arm64
+          # simdjson removed from testing:
+          # https://github.com/groonga/groonga/pull/1871
+          #
+          # We can enable this again when simdjson is added to testing again.
+          # - debian-trixie-amd64
+          # - debian-trixie-arm64
           - ubuntu-focal-amd64
           - ubuntu-focal-arm64
           - ubuntu-jammy-amd64
@@ -193,12 +197,16 @@ jobs:
           - almalinux-9-x86_64
           - almalinux-9-aarch64
           - amazon-linux-2023-x86_64
+          # This is too slow.
+          #
+          # We can enable this again when GitHub Actions arm runner is
+          # available.
           # - amazon-linux-2023-aarch64
         include:
           - id: debian-bookworm-arm64
             timeout-minutes: 60
-          - id: debian-trixie-arm64
-            timeout-minutes: 120
+          # - id: debian-trixie-arm64
+          #   timeout-minutes: 120
           - id: ubuntu-focal-arm64
             timeout-minutes: 60
           - id: ubuntu-jammy-arm64
