--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -180,7 +180,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macos-12
+    runs-on: macos-latest
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v4
