--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -312,7 +312,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macos-12
+    runs-on: macos-latest
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
