ci macos autotools: remove TokenDocumentVectorBM25 tests
We'll drop support for GNU Autotools soon. So we don't want to
maintain this case.

--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -229,6 +229,8 @@ jobs:
           echo "TZ=Asia/Tokyo" >> ${GITHUB_ENV}
       - name: "Test: stdio"
         run: |
+          # Floating point number precision mismatch
+          rm -rf test/command/suite/tokenizers/document_vector_bm25
           grntest \
             --base-dir test/command \
             --n-retries=2 \
