--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -310,6 +310,41 @@ jobs:
             --interface=http \
             test/command/suite
 
+  docker:
+    name: Docker
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - "alpine-3.20"
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Login to GitHub Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull
+        continue-on-error: true
+        run: |
+          docker compose pull ${{ matrix.target }}
+      - name: Build
+        run: |
+          docker compose build ${{ matrix.target }}
+      - name: Run
+        run: |
+          docker compose run ${{ matrix.target }}
+      - name: Push
+        if: github.ref_name == 'main'
+        continue-on-error: true
+        run: |
+          docker compose push ${{ matrix.target }}
+
   macos:
     name: macOS
     runs-on: macos-latest
