--- a/doc/files.am
+++ b/doc/files.am
@@ -723,6 +723,7 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-latin-alphabet-with.log \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-middle-dot.log \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-prolonged-sound-mark.log \
+	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-to-katakana.log \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-to-romaji-complex.log \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-to-romaji.log \
 	$(top_srcdir)/doc/source/example/reference/normalizers/normalizer-nfkc150-unify-voiced-sound-mark-hiragana.log \
@@ -2043,6 +2044,7 @@ source_files_relative_from_doc_dir = \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-latin-alphabet-with.log \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-middle-dot.log \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-prolonged-sound-mark.log \
+	source/example/reference/normalizers/normalizer-nfkc150-unify-to-katakana.log \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-to-romaji-complex.log \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-to-romaji.log \
 	source/example/reference/normalizers/normalizer-nfkc150-unify-voiced-sound-mark-hiragana.log \
