--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,10 @@ set(GRN_RELATIVE_RUBY_SCRIPTS_DIR
     "${CMAKE_INSTALL_LIBDIR}/${GRN_PROJECT_NAME}/scripts/ruby")
 set(GRN_RUBY_SCRIPTS_DIR
     "${CMAKE_INSTALL_PREFIX}/${GRN_RELATIVE_RUBY_SCRIPTS_DIR}")
+set(GRN_RELATIVE_LANGUAGE_MODELS_DIR
+    "${CMAKE_INSTALL_DATADIR}/${GRN_PROJECT_NAME}/language_models")
+set(GRN_LANGUAGE_MODELS_DIR
+    "${CMAKE_INSTALL_PREFIX}/${GRN_RELATIVE_LANGUAGE_MODELS_DIR}")
 
 if(GRN_C_COMPILER_GNU_LIKE)
   set(GRN_C_COMPILE_FLAGS "${GRN_C_COMPILE_FLAGS} $<$<CONFIG:Debug>:-g3 -O0>")
