ci macos: use macos-13 temporary
This serves as a workaround while awaiting a fix for the rpath problem in Rroonga.
Once resolved, we should revert to using macos-latest.

--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -180,7 +180,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macos-latest
+    runs-on: macos-13
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v4
