ci macos: temporarily disable mruby test on macos-latest
Because there is a rpath issue in Rroonga.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -409,6 +409,8 @@ jobs:
             --groonga-install-prefix=/usr/local \
             -v
       - name: "Test: mruby"
+        # TODO: Disabled temporarily as a workaround for the rpath issue in Rroonga.
+        if: false
         run: |
           USE_SYSTEM=yes test/mruby/run-test.rb
       - name: "Test: stdio"
