package: windows: Add `vcomp140.dll` to with-vcruntime package
Fix the missing DLL error.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -761,6 +761,7 @@ jobs:
           $VC_REDIST_VCRUNTIME = "${VC_REDIST_DIR}\vcruntime140.dll"
           $VC_REDIST_VCRUNTIME_1 = "${VC_REDIST_DIR}\vcruntime140_1.dll"
           $VC_REDIST_MSVCP = "${VC_REDIST_DIR}\msvcp140.dll"
+          $VC_REDIST_VCOMP = "${VC_REDIST_DIR}\vcomp140.dll"
           Copy-Item `
             ${VC_REDIST_VCRUNTIME} `
             "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
@@ -771,6 +772,9 @@ jobs:
           }
           Copy-Item `
             ${VC_REDIST_MSVCP} `
+            "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
+          Copy-Item `
+            ${VC_REDIST_VCOMP} `
             "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
           Copy-Item `
             "${Env:GITHUB_WORKSPACE}\packages\windows\vcruntime\vs${{ matrix.vs-version }}\readme.txt" `
