package: windows: Add `vcomp140.dll` to with-vcruntime package (#1993)
Fix the missing DLL error.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -758,9 +758,11 @@ jobs:
 
           $VC_REDIST_VERSION = (Get-Content "${Env:VC_PREFIX}\Auxiliary\Build\Microsoft.VCRedistVersion.default.txt")
           $VC_REDIST_DIR = "${Env:VC_PREFIX}\Redist\MSVC\${VC_REDIST_VERSION}\${Env:VC_ARCHITECTURE}\Microsoft.VC${{ matrix.vc-toolset-version }}.CRT"
+          $VC_REDIST_DIR_OPEN_MP = "${Env:VC_PREFIX}\Redist\MSVC\${VC_REDIST_VERSION}\${Env:VC_ARCHITECTURE}\Microsoft.VC${{ matrix.vc-toolset-version }}.OpenMP"
           $VC_REDIST_VCRUNTIME = "${VC_REDIST_DIR}\vcruntime140.dll"
           $VC_REDIST_VCRUNTIME_1 = "${VC_REDIST_DIR}\vcruntime140_1.dll"
           $VC_REDIST_MSVCP = "${VC_REDIST_DIR}\msvcp140.dll"
+          $VC_REDIST_VCOMP = "${VC_REDIST_DIR_OPEN_MP}\vcomp140.dll"
           Copy-Item `
             ${VC_REDIST_VCRUNTIME} `
             "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
@@ -771,6 +773,9 @@ jobs:
           }
           Copy-Item `
             ${VC_REDIST_MSVCP} `
+            "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
+          Copy-Item `
+            ${VC_REDIST_VCOMP} `
             "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin"
           Copy-Item `
             "${Env:GITHUB_WORKSPACE}\packages\windows\vcruntime\vs${{ matrix.vs-version }}\readme.txt" `
