Add files to the workflow `paths`

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,6 +14,8 @@ on:
       - 'Brewfile'
       - 'ci/**'
       - 'cmake/**'
+      - 'compose.yaml'
+      - 'dockerfiles/*'
       - 'include/**/*.h'
       - 'include/**/*.h.in'
       - 'include/**/*.hpp'
@@ -41,6 +43,8 @@ on:
       - 'Brewfile'
       - 'ci/**'
       - 'cmake/**'
+      - 'compose.yaml'
+      - 'dockerfiles/*'
       - 'include/**/*.h'
       - 'include/**/*.h.in'
       - 'include/**/*.hpp'
