docs: install/cmake: Change from reStructuredText to Markdown

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -161,6 +161,7 @@ repos:
           (
           ?CMakePresets\.json|
           ?doc/source/contribution/documentation/introduction\.md|
+          ?doc/source/install/cmake\.md|
           )
 
 exclude: "^vendor/.*"
