--- a/doc/files.am
+++ b/doc/files.am
@@ -1030,7 +1030,7 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/install/almalinux.rst \
 	$(top_srcdir)/doc/source/install/amazon_linux.rst \
 	$(top_srcdir)/doc/source/install/centos.rst \
-	$(top_srcdir)/doc/source/install/cmake.rst \
+	$(top_srcdir)/doc/source/install/cmake.md \
 	$(top_srcdir)/doc/source/install/debian.rst \
 	$(top_srcdir)/doc/source/install/docker.rst \
 	$(top_srcdir)/doc/source/install/mac_os_x.rst \
