Wait until ready
https://github.com/mroonga/mroonga/blob/3f8e63297fdac0f9b98092eea01d55e2cc289e5f/.github/workflows/linux.yml#L360-L365

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -109,8 +109,16 @@ jobs:
         run: |
           set -x
           sudo incus admin init --auto
-          sudo incus launch ${{ matrix.image }} target
+          sudo incus launch --quiet ${{ matrix.image }} target
           sudo incus config device add target host disk source=$PWD path=/host
+
+          # Ideally, we would use systemctl is-system-running --wait to ensure all services are fully operational.
+          # However, this option doesn't work in AlmaLinux 8 and results in an error.
+          # As a workaround, we introduced a 10-second sleep delay to allow network services time to stabilize,
+          # preventing DNS resolution errors when attempting to dnf install command.
+          # ref: https://discuss.linuxcontainers.org/t/network-issue-with-almalinux-8-9-on-github-actions-using-incus/20046
+          sleep 10
+
           sudo incus exec target -- /host/setup.sh
           sudo incus exec target -- /host/build.sh /host /tmp/build /tmp/local
           sudo incus stop target
