--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,6 +81,7 @@ repos:
           ?lib/grn_distance_instantiation\.hpp|
           ?lib/grn_error\.h|
           ?lib/grn_expr\.h|
+          ?lib/grn_expr_executor\.h|
           ?lib/grn_geo\.h|
           ?lib/grn_ii\.h|
           ?lib/grn_io\.h|
